iac/kustomize/wise-home-index/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wise-home-index
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - home.bradandmarsha.com
      secretName: certificate-wise-home-index
  rules:
    - host: home.bradandmarsha.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wise-home-index
              port:
                number: 8080
